# hell-code

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt
agents/: junior_coder.md  legal_auditor.md  main_agent.md  senior_reviewer.md  seo_analyst.md
logic/: context.py  dev_suite.py  dynamic_suite.py  legal_suite.py  llm_wrapper.py  manager.py  orchestrator.py  seo_suite.py  session_manager.py  system_suite.py  tools.py
skills/dev/: SKILL.md
skills/legal/: SKILL.md
skills/seo/: SKILL.md
src/: app.rs  bridge.rs  commands.rs  config.rs  context.rs  init.rs  logger.rs  main.rs  theme.rs  ui.rs
