[package]
name = "hell-code"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime for high-performance I/O
tokio = { version = "1.37.0", features = ["full"] }
# Fast file walking (ignores .git, node_modules, etc.)
ignore = "0.4.22"
# Beautiful Terminal UI
ratatui = "0.26.1"
crossterm = "0.27.0"
# Error handling
anyhow = "1.0.82"
# CLI Argument parsing
clap = { version = "4.5.4", features = ["derive"] }
# Python Bridge
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
# Serialization
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.12"
dialoguer = "0.11.0"
chrono = "0.4.38"
